allow PAPI to be installed somewhere non-standard

--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -468,7 +468,8 @@ GhcRtsWithFrontPanel = NO
 # Include support for CPU performance counters via the PAPI library in the RTS?
 # (PAPI: http://icl.cs.utk.edu/papi/)
 GhcRtsWithPapi = NO
-HavePapi = @HavePapi@
+PapiLibDir=
+PapiIncludeDir=
 
 ################################################################################
 #
