--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -785,7 +785,7 @@ GHC_SPLIT_DIR_ABS	= $(FPTOOLS_TOP_ABS)/$(GHC_SPLIT_DIR_REL)
 GHC_UNLIT_PGM		= unlit$(exeext)
 GHC_HP2PS_PGM		= hp2ps
 GHC_HSTAGS_PGM		= hasktags
-GHC_GHCTAGS_PGM		= ghctags
+GHC_GHCTAGS_INPLACE_PGM	= ghctags-inplace
 GHC_HSC2HS_INPLACE_PGM	= hsc2hs-inplace
 GHC_TOUCHY_PGM		= touchy$(exeext)
 GHC_MANGLER_PGM		= ghc-asm
@@ -811,7 +811,7 @@ endif
 UNLIT			= $(GHC_UNLIT_DIR)/$(GHC_UNLIT_PGM)
 HP2PS			= $(GHC_HP2PS_DIR)/$(GHC_HP2PS_PGM)
 HSTAGS			= $(GHC_HSTAGS_DIR)/$(GHC_HSTAGS_PGM)
-GHCTAGS			= $(GHC_GHCTAGS_DIR)/$(GHC_GHCTAGS_PGM)
+GHCTAGS_INPLACE		= $(GHC_GHCTAGS_DIR)/$(GHC_GHCTAGS_INPLACE_PGM)
 HSC2HS_INPLACE		= $(GHC_HSC2HS_DIR)/$(GHC_HSC2HS_INPLACE_PGM)
 MANGLER			= $(GHC_MANGLER_DIR)/$(GHC_MANGLER_PGM)
 SPLIT			= $(GHC_SPLIT_DIR)/$(GHC_SPLIT_PGM)
