Use INSTALL_SCRIPT, not INSTALL_PROGRAM, when installing scripts; fixes #1858

--- a/driver/mangler/Makefile
+++ b/driver/mangler/Makefile
@@ -21,8 +21,8 @@ boot :: all
 endif
 
 binary-dist:
-	$(INSTALL_DIR)              $(BIN_DIST_DIR)/driver/mangler
-	$(INSTALL_DATA)    Makefile $(BIN_DIST_DIR)/driver/mangler/
-	$(INSTALL_PROGRAM) $(PROG)  $(BIN_DIST_DIR)/driver/mangler/
+	$(INSTALL_DIR)             $(BIN_DIST_DIR)/driver/mangler
+	$(INSTALL_DATA)   Makefile $(BIN_DIST_DIR)/driver/mangler/
+	$(INSTALL_SCRIPT) $(PROG)  $(BIN_DIST_DIR)/driver/mangler/
 
 include $(TOP)/mk/target.mk
