--- a/utils/mkdirhier/Makefile
+++ b/utils/mkdirhier/Makefile
@@ -12,8 +12,8 @@ all::
 	$(EXECUTABLE_FILE) $(PROG)
 
 binary-dist:
-	$(INSTALL_DIR)              $(BIN_DIST_DIR)/utils/mkdirhier
-	$(INSTALL_DATA)    Makefile $(BIN_DIST_DIR)/utils/mkdirhier/
-	$(INSTALL_PROGRAM) $(PROG)  $(BIN_DIST_DIR)/utils/mkdirhier/
+	$(INSTALL_DIR)             $(BIN_DIST_DIR)/utils/mkdirhier
+	$(INSTALL_DATA)   Makefile $(BIN_DIST_DIR)/utils/mkdirhier/
+	$(INSTALL_SCRIPT) $(PROG)  $(BIN_DIST_DIR)/utils/mkdirhier/
 
 include $(TOP)/mk/target.mk
