Define CPP in distrib/Makefile-bin-vars.in; fixes #1855 Patch from Christian Maeder

--- a/distrib/Makefile-bin-vars.in
+++ b/distrib/Makefile-bin-vars.in
@@ -41,6 +41,7 @@ exeext      = @exeext@
 SED	        = @SedCmd@
 DEFAULT_TMPDIR = /tmp
 RANLIB      = @RANLIB@
+CPP         = @CPP@
 
 RAWCPP_FLAGS            = -undef -traditional
 
