--- a/distrib/Makefile-bin-vars.in
+++ b/distrib/Makefile-bin-vars.in
@@ -37,6 +37,13 @@ CP          = cp
 LN_S        = @LN_S@
 CHMOD       = chmod
 INSTALL	    = @INSTALL@
+#
+# Sigh - the autoconf macro for INSTALL will subst a relative path to the fallback
+# install-sh script (if chosen). This not terribly useful to us, so we convert
+# it into an abs. path.
+# 
+INSTALL			:= $(subst ./install-sh,$(FPTOOLS_TOP_ABS)/install-sh,$(INSTALL))
+
 exeext      = @exeext@
 SED	        = @SedCmd@
 DEFAULT_TMPDIR = /tmp
