Fix the libraries Makefile     x && y is not the same as     if x; then y; fi as the latter doesn't fail when x fails

--- a/libraries/Makefile
+++ b/libraries/Makefile
@@ -300,7 +300,7 @@ doc.library.%: stamp/configure.library.build$(CONFIGURE_STAMP_EXTRAS).% \
 	                               $(CABAL_HADDOCK_FLAGS); \
 	fi
 ifneq "$(HSCOLOUR)" ""
-	ifBuildable/ifBuildable $* && cp hscolour.css $*/dist/doc/html/$*/src/
+	if ifBuildable/ifBuildable $*; then cp hscolour.css $*/dist/doc/html/$*/src/; fi
 endif
 
 .PHONY: distclean clean clean.library.%
