--- a/driver/ghci/Makefile
+++ b/driver/ghci/Makefile
@@ -22,6 +22,7 @@ install::
 	$(RM) -f $(GHCII_SCRIPT)
 	echo "#!$(SHELL)"                                  >> $(GHCII_SCRIPT)
 	echo 'exec "$$0"/../ghc --interactive $${1+"$$@"}' >> $(GHCII_SCRIPT)
+	chmod +x $(GHCII_SCRIPT)
 else
 LINK = ghci
 LINK_TARGET = $(LINK)-$(ProjectVersion)
