Optionally use libffi to implement 'foreign import "wrapper"' (#793) To enable this, set UseLibFFI=YES in mk/build.mk.
The main advantage here is that this reduces the porting effort for
new platforms: libffi works on more architectures than our current
adjustor code, and it is probably more heavily tested.  We could
potentially replace our existing code, but since it is probably faster
than libffi (just a guess, I'll measure later) and is already working,
it doesn't seem worthwhile.

Right now, you must have libffi installed on your system.  I used the
one supplied by Debian/Ubuntu.

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -276,6 +276,11 @@ ifeq "$(RelocatableBuild)" "YES"
 else
 	@echo "cRelocatableBuild     = False"                 >> $(CONFIG_HS)
 endif
+ifeq "$(UseLibFFI)" "YES"
+	@echo "cLibFFI               = True"                  >> $(CONFIG_HS)
+else
+	@echo "cLibFFI               = False"                 >> $(CONFIG_HS)
+endif
 	@echo done.
 
 CLEAN_FILES += $(CONFIG_HS)
